--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         }
     ],
     "require": {
-        "symfony/console": "^5.3",
-        "squizlabs/php_codesniffer": "^3.6"
+        "phpstan/phpstan": "^0.12.99",
+        "squizlabs/php_codesniffer": "^3.6",
+        "symfony/console": "^5.3"
     },
     "autoload": {
         "psr-4": {
@@ -24,7 +25,8 @@
     },
     "minimum-stability": "dev",
     "scripts": {
-        "phpcs": "phpcs -s --colors --extensions=php --standard=./phpcs.xml"
+        "phpcs": "phpcs -s --colors --extensions=php --standard=./phpcs.xml",
+        "phpstan": "phpstan analyse --memory-limit=512M"
     },
     "prefer-stable": true
 }
