--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^7.3",
         "phpstan/phpstan": "^0.12.99",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/console": "^5.3"
