--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.3",
         "phpstan/phpstan": "^0.12.99",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/console": "^5.3"
+        "symfony/console": "^5.3",
+        "symfony/yaml": "^5.3"
     },
     "autoload": {
         "psr-4": {
