--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpstan/phpstan": "^0.12.99",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/console": "^5.3",
+        "symfony/string": "^5.4",
         "symfony/yaml": "^5.3"
     },
     "autoload": {
